# Discord-Music-Bot

./: Cargo.toml  autoplaylist.txt  config.json
src/: configuration.rs  main.rs
src/music/: mod.rs  playlist.rs  voice_client.rs  ytdl.rs
